--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,6 @@
 inventory = inventory.yaml
 host_key_checking = False
 private_key_file = .ssh/id_ed25519
+
+playbook_dir = playbooks
+roles_path = roles
